--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
   <body>
     <script  type="text/javascript" strategy="beforeInteractive" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ec300907868b12f161626f5b750c312b"></script>
     <script src="https://pay.nicepay.co.kr/v1/js/"></script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
